--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
-    tools:context=".ui.DetailFragment">
+    tools:context=".ui.DetailFragment"
+    >
 
     <ImageView
         android:id="@+id/detailFragment_image"
@@ -52,14 +53,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="8dp"
-            android:text="2"
+
             android:textSize="20sp"
             />
+
         <ImageButton
-            android:id="@+id/detailFragment_decrement"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="30sp"
+            android:textSize="50sp"
             android:background="@drawable/rounded"
             android:src="@drawable/ic_delete"
             />
